Testing der Annotation Erweiterung für den Octopus.